--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,15 @@
-/* You can add global styles to this file, and also import other style files */
+html, body, app-root {
+  height: 100%;
+}
+body {
+  margin: 0;
+}
+footer {
+  position: fixed;
+  bottom: 0;
+  z-index: 1000;
+  padding: 1em;
+  width: 100%;
+
+  background-color: aquamarine;
+}
