--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,3 +1,3 @@
 <footer>
-  <a href="#">Impressum</a> & <a href="#">Datenschutz</a>
+  <a id="impressum" [routerLink]="['/impressum']">Impressum</a> & <a id="privacypolicy" [routerLink]="['/datenschutz']">Datenschutz</a>
 </footer>
