:sparkles: create new event id and navigate

--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -2,7 +2,7 @@
   Neue Veranstaltungen anlegen, anpassen und den Link an Besucher verteilen.
 </section>
 
-<button>Neue Veranstaltung erstellen</button>
+<button (click)="navigateToNewEvent()">Neue Veranstaltung erstellen</button>
 
 <div>
   Veranstaltung bearbeiten:
