:sparkles: add, edit and show events

--- a/src/app/events/event-new/event-new.component.html
+++ b/src/app/events/event-new/event-new.component.html
@@ -1,6 +1,4 @@
-<div *ngIf="!!event">
-
-<h2>Veranstaltung bearbeiten</h2>
+<h2>Neue Veranstaltung erstellen</h2>
 
 <section>
   <input
@@ -22,6 +20,3 @@
 </section>
 
 <button (click)="saveEvent()">Speichern</button>
-<button>Abbrechen</button>
-
-</div>
