--- a/src/app/events/event/event.component.html
+++ b/src/app/events/event/event.component.html
@@ -1,1 +1,7 @@
-<p>event works!</p>
+<div *ngIf="!!event">
+<h2>{{ event.title }}</h2>
+
+<time>{{ event.date }}</time>
+
+<section>{{ event.description }}</section>
+</div>
