--- a/src/app/events/event-new/event-new.component.html
+++ b/src/app/events/event-new/event-new.component.html
@@ -1,22 +1,37 @@
 <h2>Neue Veranstaltung erstellen</h2>
 
-<section>
-  <input
-    type="text"
-    placeholder="Veranstaltungsname"
-    [(ngModel)]="event.title"
-  />
+<section class="form">
+  <div>
+    <label for="name">Titel</label>
+    <input
+      matInput
+      id="name"
+      type="text"
+      placeholder="Veranstaltungsname"
+      [(ngModel)]="event.title"
+    />
+  </div>
 
-  <input
-    type="date"
-    [(ngModel)]="event.date"
-  />
+  <div>
+    <label for="date">Datum</label>
+    <input
+      matInput
+      id="date"
+      type="date"
+      [(ngModel)]="event.date"
+    />
+  </div>
 
-  <input
-    type="text"
-    placeholder="Beschreibungstext"
-    [(ngModel)]="event.description"
-  />
+  <div>
+    <label for="description">Beschreibungstext</label>
+    <textarea
+      matInput
+      id="description"
+      rows="5"
+      placeholder="Beschreibungstext"
+      [(ngModel)]="event.description"
+    ></textarea>
+  </div>
 </section>
 
-<button (click)="saveEvent()">Speichern</button>
+<button mat-button (click)="saveEvent()">Speichern</button>
