--- a/src/app/events/event/event.component.html
+++ b/src/app/events/event/event.component.html
@@ -4,4 +4,35 @@
 <time>{{ event.date }}</time>
 
 <section>{{ event.description }}</section>
+
+  <table mat-table [dataSource]="event.entries ?? []">
+
+    <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef>Wer?</th>
+      <td mat-cell *matCellDef="let element">{{ element.name }}</td>
+      <td mat-footer-cell *matFooterCellDef><input matInput type="text" placeholder="Name"></td>
+    </ng-container>
+
+    <ng-container matColumnDef="entry">
+      <th mat-header-cell *matHeaderCellDef>Was?</th>
+      <td mat-cell *matCellDef="let element">{{ element.entry }}</td>
+      <td mat-footer-cell *matFooterCellDef><input matInput type="text" placeholder="Beitrag"></td>
+    </ng-container>
+
+    <ng-container matColumnDef="category">
+      <th mat-header-cell *matHeaderCellDef>Kategorie</th>
+      <td mat-cell *matCellDef="let element">{{ element.category }}</td>
+      <td mat-footer-cell *matFooterCellDef><input matInput type="text" placeholder="Kategorie"></td>
+    </ng-container>
+
+    <ng-container matColumnDef="actions">
+      <th mat-header-cell *matHeaderCellDef></th>
+      <td mat-cell *matCellDef>buttons</td>
+      <td mat-footer-cell *matFooterCellDef><button mat-button>Speichern</button></td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    <tr mat-footer-row *matFooterRowDef="displayedColumns"></tr>
+  </table>
 </div>
