--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,6 +3,13 @@ html, body, app-root {
 }
 body {
   margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+main {
+  padding: 2rem; // todo less for mobile
+  max-width: 60rem;
+  margin: 0 auto;
 }
 footer {
   position: fixed;
@@ -12,4 +19,19 @@ footer {
   width: 100%;
 
   background-color: aquamarine;
+}
+
+.form {
+  display: flex;
+  flex-flow: column;
+
+  > * {
+    margin-bottom: 1em;
+    display: flex;
+    flex-flow: column;
+  }
+}
+
+table {
+  width: 100%;
 }
