--- a/src/styles.scss
+++ b/src/styles.scss
@@ -21,6 +21,12 @@ footer {
   background-color: aquamarine;
 }
 
+h1 {
+  color: aquamarine;
+  font-size: small;
+  padding-left: 0.5rem;
+}
+
 .form {
   display: flex;
   flex-flow: column;
@@ -34,4 +40,13 @@ footer {
 
 table {
   width: 100%;
+}
+
+.margin-b {
+  margin-bottom: 1.5rem;
+}
+
+.hint {
+  font-size: 0.7rem;
+  color: dimgrey;
 }
