:rocket: deploy to firebase

--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -24,7 +24,7 @@
     #id
     style="margin-right: 1rem;"
   >
-  <button mat-raised-button (click)="navigateToEditEvent(id.value)" [disabled]="(id.value.length < 5)">Bearbeiten</button>
+  <button mat-raised-button (click)="navigateToEditEvent(id.value)">Bearbeiten</button>
 </section>
 
 <section>
