--- a/src/app/events/event/event.component.html
+++ b/src/app/events/event/event.component.html
@@ -24,7 +24,7 @@
       <ng-container matColumnDef="category">
         <th mat-header-cell *matHeaderCellDef>Kategorie</th>
         <td mat-cell *matCellDef="let element">{{ element.category }}</td>
-        <td mat-footer-cell *matFooterCellDef><input matInput type="text" placeholder="Kategorie" [(ngModel)]="item.category"></td>
+        <td mat-footer-cell *matFooterCellDef><mat-select [(ngModel)]="item.category"><mat-option *ngFor="let category of event.categories" [value]="category">{{category}}</mat-option></mat-select></td>
       </ng-container>
 
       <ng-container matColumnDef="actions">
