--- a/src/app/events/event-new/new-event-dialog/new-event-dialog.component.html
+++ b/src/app/events/event-new/new-event-dialog/new-event-dialog.component.html
@@ -1,6 +1,6 @@
 <section>
   <h3>Die Veranstaltung wurde erstellt</h3>
-  <span>Der folgende Link kann nun an alle Teilnehmer verteilt werden:<br><a href="https://bringmit.web.app/{{data.id}}" target="_blank">bringmit.web.app/{{data.id}}</a></span><br>
+  <span>Der folgende Link kann nun an alle Teilnehmer verteilt werden:<br><a href="https://bringmit-planner.web.app/{{data.id}}" target="_blank">bringmit.web.app/{{data.id}}</a></span><br>
   <span>Unter Angabe der ID kann die Veranstaltung nachträglich noch angepasst werden:<br>{{data.id}}</span><br>
   <button mat-raised-button (click)="onOk()">Zur Veranstaltung</button>
 </section>
